--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             </li>
         </ul>
         <!--TODO: customize mobile nav logo image-->
-        <img src="logo.png" alt="Company Logo"/>
+        <img src="./images/logo.webp" alt="Company Logo"/>
     </nav>
     <nav aria-label="Main Navigation" class="main-nav">
         <!--TODO: customize logo used in main and mobile nav bar-->
-        <img src="logo.png" alt="Company Logo"/>
+        <img src="./images/logo.webp" alt="Company Logo"/>
         <ul>
             <!--TODO: customize main nav bar link titles and hrefs-->
             <li>
@@ -95,7 +95,7 @@
         <article class="about-content">
             <div class="about-image">
                 <!--TODO: Add about section image-->
-                <img src="about-us.jpg" class="box-shadow" alt="About Us" loading="lazy"/>
+                <img src="./images/about.webp" class="box-shadow" alt="About Us" loading="lazy"/>
             </div>
             <div class="about-text">
                 <!--TODO: Add about section subheading text-->
@@ -115,7 +115,7 @@
         <div class="services-wrapper">
             <article class="services-card box-shadow center-clean">
                 <!--TODO: Add service 1 image-->
-                <img alt="Service 1" class="top-image" src="service1.jpg" loading="lazy"/>
+                <img alt="Service 1" class="top-image" src="./images/service.webp" loading="lazy"/>
                 <div class="services-content">
                     <!--TODO: Add service 1 title-->
                     <h5>Service 1</h5>
@@ -127,7 +127,7 @@
             </article>
             <article class="services-card box-shadow center-clean">
                 <!--TODO: Add service 2 image-->
-                <img alt="Service 2" class="top-image" src="service2.jpg" loading="lazy"/>
+                <img alt="Service 2" class="top-image" src="./images/service.webp" loading="lazy"/>
                 <div class="services-content">
                     <!--TODO: Add service 2 title-->
                     <h5>Service 2</h5>
@@ -139,7 +139,7 @@
             </article>
             <article class="services-card box-shadow center-clean">
                 <!--TODO: Add service 3 image-->
-                <img alt="Service 3" class="top-image" src="service3.jpg" loading="lazy"/>
+                <img alt="Service 3" class="top-image" src="./images/service.webp" loading="lazy"/>
                 <div class="services-content">
                     <!--TODO: Add service 3 title-->
                     <h5>Service 3</h5>
@@ -196,12 +196,12 @@
                 <div class="first-image" id="first-image-1">
                     <p>before</p>
                     <!--TODO: Add project 1 before image-->
-                    <img src="before1.jpg" alt="before image" loading="lazy"/>
+                    <img src="./images/project.webp" alt="before image" loading="lazy"/>
                 </div>
                 <div class="second-image" id="second-image-1">
                     <p>after</p>
                     <!--TODO: Add project 1 after image-->
-                    <img src="after1.jpg" alt="after image" loading="lazy"/>
+                    <img src="./images/project.webp" alt="after image" loading="lazy"/>
                 </div>
             </div>
         </article>
@@ -242,55 +242,53 @@
                 <div class="first-image" id="first-image-2">
                     <p>before</p>
                     <!--TODO: Add project 2 before image-->
-                    <img src="before2.jpg" alt="before image" loading="lazy"/>
+                    <img src="./images/project.webp" alt="before image" loading="lazy"/>
                 </div>
                 <div class="second-image" id="second-image-2">
                     <p>after</p>
                     <!--TODO: Add project 2 after image-->
-                    <img src="after2.jpg" alt="after image" loading="lazy"/>
+                    <img src="./images/project.webp" alt="after image" loading="lazy"/>
                 </div>
             </div>
         </article>
     </section>
     <section class="contact box-shadow" id="contact">
-        <!--TODO: Add contact section heading-->
         <h2>Contact Us</h2>
         <article class="contact-content">
+            <!--TODO: Add contact section image-->
             <div class="contact-image">
-                <!--TODO: Add contact section image-->
-                <div class="contact-image">
-                    <img src="" class="box-shadow" alt="" loading="lazy"/>
-                </div>
-                <div class="contact-form">
-                    <!-- TODO: Add contact form heading -->
-                    <h4></h4>
-                    <form id="form">
-                        <fieldset>
-                            <div>
-                                <!-- TODO: Add contact form name label -->
-                                <label class="required" for="name"></label><br/>
-                                <input required type="text" id="name" name="name"/><br/>
-                            </div>
-                            <div>
-                                <!-- TODO: Add contact form number label -->
-                                <label class="required" for="number"></label><br/>
-                                <input required type="tel" id="number" name="number"/><br/>
-                            </div>
-                            <div>
-                                <!-- TODO: Add contact form email label -->
-                                <label class="required" for="email"></label><br/>
-                                <input required type="email" id="email" name="email"/><br/>
-                            </div>
-                            <div>
-                                <!-- TODO: Add contact form notes label -->
-                                <label for="notes"></label><br/>
-                                <textarea id="notes" name="notes"></textarea><br/>
-                            </div>
-                        </fieldset>
-                        <!-- TODO: Add contact form submit button text -->
-                        <button class="button submit-button" type="submit">SUBMIT</button>
-                    </form>
-                </div>
+                <img src="./images/contact.webp" class="box-shadow" alt="" loading="lazy"/>
+            </div>
+            <div class="contact-form">
+                <!-- TODO: Add contact form heading -->
+                <h4>Contact Form</h4>
+                <form id="form">
+                    <fieldset>
+                        <div>
+                            <!-- TODO: Add contact form name label -->
+                            <label class="required" for="name">Name</label><br/>
+                            <input required type="text" id="name" name="name"/><br/>
+                        </div>
+                        <div>
+                            <!-- TODO: Add contact form number label -->
+                            <label class="required" for="number">Phone Number</label><br/>
+                            <input required type="tel" id="number" name="number"/><br/>
+                        </div>
+                        <div>
+                            <!-- TODO: Add contact form email label -->
+                            <label class="required" for="email">Email</label><br/>
+                            <input required type="email" id="email" name="email"/><br/>
+                        </div>
+                        <div>
+                            <!-- TODO: Add contact form notes label -->
+                            <label for="notes">Notes</label><br/>
+                            <textarea id="notes" name="notes"></textarea><br/>
+                        </div>
+                    </fieldset>
+                    <!-- TODO: Add contact form submit button text -->
+                    <button class="button submit-button" type="submit">SUBMIT</button>
+                </form>
+            </div>
         </article>
     </section>
 </main>
@@ -302,7 +300,7 @@
                 <script>document.write(new Date().getFullYear())</script>
             </p>
             <!-- TODO: Add footer logo image -->
-            <img src="" alt=""/>
+            <img src="./images/logo.webp" alt=""/>
         </div>
         <div class="footer-right">
             <!-- TODO: Add footer contact heading -->
@@ -311,11 +309,11 @@
                 <ul>
                     <!-- TODO: Add footer phone -->
                     <li>
-                        phone: <a href=""></a>
+                        phone: <a href="">1234567890</a>
                     </li>
                     <!-- TODO: Add footer email -->
                     <li>
-                        email: <a href=""></a>
+                        email: <a href="">your-email@email.com</a>
                     </li>
                 </ul>
             </address>
