fix a few style issues

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                 <!--TODO: Add about section subheading text-->
                 <h3>Our Story</h3>
                 <!--TODO: Add about section paragraph text-->
-                <p>Details about the company or organization, highlighting key values.</p>
+                <p>Introductory details about the company, highlighting key values. Focus on the most important selling points and why you are a leader in the space.</p>
                 <!--TODO: Add another paragraph for about section-->
-                <p>Additional information about your mission, vision, or history.</p>
+                <p>Additional information about your mission, vision, or history. Restate your main service or product offering. Blah blah blah blah blah blah blah blah.</p>
                 <!--TODO: Customize call-to-action button link and text-->
                 <a class="button box-shadow center-clean" href="#">Learn More</a>
             </div>
@@ -120,7 +120,7 @@
                     <!--TODO: Add service 1 title-->
                     <h5>Service 1</h5>
                     <!--TODO: Add service 1 description-->
-                    <p>Description of service 1.</p>
+                    <p>Description of service 1. What is the service and why is it important? Who does it appeal to? Other high-level info</p>
                     <!--TODO: Customize service 1 button link and text-->
                     <a class="button box-shadow center-clean" href="#">Learn More</a>
                 </div>
@@ -132,7 +132,7 @@
                     <!--TODO: Add service 2 title-->
                     <h5>Service 2</h5>
                     <!--TODO: Add service 2 description-->
-                    <p>Description of service 2.</p>
+                    <p>Description of service 2. What is the service and why is it important? Who does it appeal to? Other high-level info</p>
                     <!--TODO: Customize service 2 button link and text-->
                     <a class="button box-shadow center-clean" href="#">Learn More</a>
                 </div>
@@ -144,7 +144,7 @@
                     <!--TODO: Add service 3 title-->
                     <h5>Service 3</h5>
                     <!--TODO: Add service 3 description-->
-                    <p>Description of service 3.</p>
+                    <p>Description of service 3. What is the service and why is it important? Who does it appeal to? Other high-level info</p>
                     <!--TODO: Customize service 3 button link and text-->
                     <a class="button box-shadow center-clean" href="#">Learn More</a>
                 </div>
@@ -304,7 +304,7 @@
         </div>
         <div class="footer-right">
             <!-- TODO: Add footer contact heading -->
-            <p></p>
+            <p>Contact Info</p>
             <address>
                 <ul>
                     <!-- TODO: Add footer phone -->
