fixed remaining style issues

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <!--TODO: Add project location and title text-->
                 <div class="left-text">
                     <h5 class="location">Location</h5>
-                    <h4>Project Title</h4>
+                    <h4>First Project</h4>
                 </div>
                 <!--TODO: Add project details for work done-->
                 <div class="right-text">
@@ -210,30 +210,30 @@
                 <!--TODO: Add project location and title text-->
                 <div class="left-text">
                     <h5 class="location">Location</h5>
-                    <h4>Project Title</h4>
+                    <h4>Second Project</h4>
                 </div>
                 <!--TODO: Add project text for work done-->
                 <div class="right-text">
                     <ul>
                         <li>
                             <i class="project-icon" data-feather="check" stroke-width="5px"></i>
-                            work completed 1
+                            other work completed 1
                         </li>
                         <li>
                             <i class="project-icon" data-feather="check" stroke-width="5px"></i>
-                            work completed 2
+                            other work completed 2
                         </li>
                         <li>
                             <i class="project-icon" data-feather="check" stroke-width="5px"></i>
-                            work completed 3
+                            other work completed 3
                         </li>
                         <li>
                             <i class="project-icon" data-feather="check" stroke-width="5px"></i>
-                            work completed 4
+                            other work completed 4
                         </li>
                         <li>
                             <i class="project-icon" data-feather="check" stroke-width="5px"></i>
-                            work completed 5
+                            other work completed 5
                         </li>
                     </ul>
                 </div>
