--- a/index.html
+++ b/index.html
@@ -1,329 +1,32 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <!--TODO: Add description-->
-    <meta name="description" content=""/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!--TODO: Add primary font from Google Fonts, etc-->
-    <link href='https://fonts.googleapis.com/css?family=Inter:300,500,700' rel='stylesheet' type='text/css'>
-    <!--TODO: Add secondary font from Google Fonts, etc-->
-    <link href='https://fonts.googleapis.com/css?family=Raleway:300,500,700' rel='stylesheet' type='text/css'>
-    <!--TODO: Add secondary font if needed-->
-    <link rel="stylesheet" href="main.css"/>
-    <!--TODO: Add meta title-->
-    <title></title>
-</head>
-<body>
-<header role="banner">
-    <div class="mobile-menu-button box-shadow" id="hamburger">
-        <i id="hamburger-icon" data-feather="menu"></i>
-        <i class="hidden" id="close-icon" data-feather="x-square"></i>
-    </div>
-    <nav aria-label="Mobile Navigation" class="mobile-nav" id="mobile-nav">
-        <!--TODO: customize mobile nav bar link titles and hrefs-->
-        <ul>
-            <li>
-                <a href="#home">
-                    <div class="mobile-row">HOME</div>
-                </a>
-            </li>
-            <li>
-                <a href="#about">
-                    <div class="mobile-row">ABOUT</div>
-                </a>
-            </li>
-            <li>
-                <a href="#services">
-                    <div class="mobile-row">OUR SERVICES</div>
-                </a>
-            </li>
-            <li>
-                <a href="#projects">
-                    <div class="mobile-row">OUR PROJECTS</div>
-                </a>
-            </li>
-        </ul>
-        <!--TODO: customize mobile nav logo image-->
-        <img src="./images/logo.webp" alt="Company Logo"/>
-    </nav>
-    <nav aria-label="Main Navigation" class="main-nav">
-        <!--TODO: customize logo used in main and mobile nav bar-->
-        <img src="./images/logo.webp" alt="Company Logo"/>
-        <ul>
-            <!--TODO: customize main nav bar link titles and hrefs-->
-            <li>
-                <a href="#about" class="center-clean">ABOUT</a>
-            </li>
-            <li>
-                <a href="#services" class="center-clean">OUR SERVICES</a>
-            </li>
-            <li>
-                <a href="#projects" class="center-clean">OUR PROJECTS</a>
-            </li>
-            <li>
-                <!--TODO: customize main navbar link-->
-                <a class="button box-shadow center-clean" href="contact.html">CONTACT US</a>
-            </li>
-        </ul>
-    </nav>
-</header>
-<main>
-    <section class="hero center-clean" id="home">
-        <article class="hero-text">
-            <!--TODO: add hero section large text-->
-            <h1 class="center-clean">Hero Section Title</h1>
-            <!--TODO: add hero section smaller text-->
-            <p>Brief description of your services or mission statement.</p>
-            <!--TODO: customize hero section CTA button link, text, and icon-->
-            <a href="tel:1234567890" class="center-clean">
-                <div class="hero-button">
-                    <p>CALL NOW</p>
-                    <div class="icon-wrapper">
-                        <i class="phone-icon" data-feather="phone"></i>
-                    </div>
-                </div>
-            </a>
-        </article>
-    </section>
-    <section class="about box-shadow" id="about">
-        <!--TODO: Add section heading text-->
-        <h2>About Us</h2>
-        <article class="about-content">
-            <div class="about-image">
-                <!--TODO: Add about section image-->
-                <img src="./images/about.webp" class="box-shadow" alt="About Us" loading="lazy"/>
-            </div>
-            <div class="about-text">
-                <!--TODO: Add about section subheading text-->
-                <h3>Our Story</h3>
-                <!--TODO: Add about section paragraph text-->
-                <p>Introductory details about the company, highlighting key values. Focus on the most important selling points and why you are a leader in the space.</p>
-                <!--TODO: Add another paragraph for about section-->
-                <p>Additional information about your mission, vision, or history. Restate your main service or product offering. Blah blah blah blah blah blah blah blah.</p>
-                <!--TODO: Customize call-to-action button link and text-->
-                <a class="button box-shadow center-clean" href="#">Learn More</a>
-            </div>
-        </article>
-    </section>
-    <section class="services" id="services">
-        <!--TODO: Add services section heading-->
-        <h2>Our Services</h2>
-        <div class="services-wrapper">
-            <article class="services-card box-shadow center-clean">
-                <!--TODO: Add service 1 image-->
-                <img alt="Service 1" class="top-image" src="./images/service.webp" loading="lazy"/>
-                <div class="services-content">
-                    <!--TODO: Add service 1 title-->
-                    <h5>Service 1</h5>
-                    <!--TODO: Add service 1 description-->
-                    <p>Description of service 1. What is the service and why is it important? Who does it appeal to? Other high-level info</p>
-                    <!--TODO: Customize service 1 button link and text-->
-                    <a class="button box-shadow center-clean" href="#">Learn More</a>
-                </div>
-            </article>
-            <article class="services-card box-shadow center-clean">
-                <!--TODO: Add service 2 image-->
-                <img alt="Service 2" class="top-image" src="./images/service.webp" loading="lazy"/>
-                <div class="services-content">
-                    <!--TODO: Add service 2 title-->
-                    <h5>Service 2</h5>
-                    <!--TODO: Add service 2 description-->
-                    <p>Description of service 2. What is the service and why is it important? Who does it appeal to? Other high-level info</p>
-                    <!--TODO: Customize service 2 button link and text-->
-                    <a class="button box-shadow center-clean" href="#">Learn More</a>
-                </div>
-            </article>
-            <article class="services-card box-shadow center-clean">
-                <!--TODO: Add service 3 image-->
-                <img alt="Service 3" class="top-image" src="./images/service.webp" loading="lazy"/>
-                <div class="services-content">
-                    <!--TODO: Add service 3 title-->
-                    <h5>Service 3</h5>
-                    <!--TODO: Add service 3 description-->
-                    <p>Description of service 3. What is the service and why is it important? Who does it appeal to? Other high-level info</p>
-                    <!--TODO: Customize service 3 button link and text-->
-                    <a class="button box-shadow center-clean" href="#">Learn More</a>
-                </div>
-            </article>
-        </div>
-    </section>
-    <section class="projects box-shadow" id="projects">
-        <!--TODO: Add projects section heading-->
-        <h2 class="center-clean">Our Projects</h2>
-        <div class="button-container" id="button-container">
-            <!--TODO: Add toggle button text-->
-            <button class="button button-inverse box-shadow center-clean" id="project-1">Project 1</button>
-            <button class="button button-inverse box-shadow center-clean" id="project-2">Project 2</button>
-        </div>
-        <article class="project-item" id="project-item-1">
-            <div class="project-item-text box-shadow">
-                <!--TODO: Add project location and title text-->
-                <div class="left-text">
-                    <h5 class="location">Location</h5>
-                    <h4>First Project</h4>
-                </div>
-                <!--TODO: Add project details for work done-->
-                <div class="right-text">
-                    <ul>
-                        <li>
-                            <i class="project-icon" data-feather="check" stroke-width="5px"></i>
-                            work completed 1
-                        </li>
-                        <li>
-                            <i class="project-icon" data-feather="check" stroke-width="5px"></i>
-                            work completed 2
-                        </li>
-                        <li>
-                            <i class="project-icon" data-feather="check" stroke-width="5px"></i>
-                            work completed 3
-                        </li>
-                        <li>
-                            <i class="project-icon" data-feather="check" stroke-width="5px"></i>
-                            work completed 4
-                        </li>
-                        <li>
-                            <i class="project-icon" data-feather="check" stroke-width="5px"></i>
-                            work completed 5
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="images-container">
-                <div class="first-image" id="first-image-1">
-                    <p>before</p>
-                    <!--TODO: Add project 1 before image-->
-                    <img src="./images/project.webp" alt="before image" loading="lazy"/>
-                </div>
-                <div class="second-image" id="second-image-1">
-                    <p>after</p>
-                    <!--TODO: Add project 1 after image-->
-                    <img src="./images/project.webp" alt="after image" loading="lazy"/>
-                </div>
-            </div>
-        </article>
-        <article class="project-item" id="project-item-2">
-            <div class="project-item-text box-shadow">
-                <!--TODO: Add project location and title text-->
-                <div class="left-text">
-                    <h5 class="location">Location</h5>
-                    <h4>Second Project</h4>
-                </div>
-                <!--TODO: Add project text for work done-->
-                <div class="right-text">
-                    <ul>
-                        <li>
-                            <i class="project-icon" data-feather="check" stroke-width="5px"></i>
-                            other work completed 1
-                        </li>
-                        <li>
-                            <i class="project-icon" data-feather="check" stroke-width="5px"></i>
-                            other work completed 2
-                        </li>
-                        <li>
-                            <i class="project-icon" data-feather="check" stroke-width="5px"></i>
-                            other work completed 3
-                        </li>
-                        <li>
-                            <i class="project-icon" data-feather="check" stroke-width="5px"></i>
-                            other work completed 4
-                        </li>
-                        <li>
-                            <i class="project-icon" data-feather="check" stroke-width="5px"></i>
-                            other work completed 5
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="images-container">
-                <div class="first-image" id="first-image-2">
-                    <p>before</p>
-                    <!--TODO: Add project 2 before image-->
-                    <img src="./images/project.webp" alt="before image" loading="lazy"/>
-                </div>
-                <div class="second-image" id="second-image-2">
-                    <p>after</p>
-                    <!--TODO: Add project 2 after image-->
-                    <img src="./images/project.webp" alt="after image" loading="lazy"/>
-                </div>
-            </div>
-        </article>
-    </section>
-    <section class="contact box-shadow" id="contact">
-        <h2>Contact Us</h2>
-        <article class="contact-content">
-            <!--TODO: Add contact section image-->
-            <div class="contact-image">
-                <img src="./images/contact.webp" class="box-shadow" alt="" loading="lazy"/>
-            </div>
-            <div class="contact-form">
-                <!-- TODO: Add contact form heading -->
-                <h4>Contact Form</h4>
-                <form id="form">
-                    <fieldset>
-                        <div>
-                            <!-- TODO: Add contact form name label -->
-                            <label class="required" for="name">Name</label><br/>
-                            <input required type="text" id="name" name="name"/><br/>
-                        </div>
-                        <div>
-                            <!-- TODO: Add contact form number label -->
-                            <label class="required" for="number">Phone Number</label><br/>
-                            <input required type="tel" id="number" name="number"/><br/>
-                        </div>
-                        <div>
-                            <!-- TODO: Add contact form email label -->
-                            <label class="required" for="email">Email</label><br/>
-                            <input required type="email" id="email" name="email"/><br/>
-                        </div>
-                        <div>
-                            <!-- TODO: Add contact form notes label -->
-                            <label for="notes">Notes</label><br/>
-                            <textarea id="notes" name="notes"></textarea><br/>
-                        </div>
-                    </fieldset>
-                    <!-- TODO: Add contact form submit button text -->
-                    <button class="button submit-button" type="submit">SUBMIT</button>
-                </form>
-            </div>
-        </article>
-    </section>
-</main>
-<footer role="contentinfo">
-    <div class="footer-content">
-        <div class="footer-left">
-            <p>
-                Copyright ©
-                <script>document.write(new Date().getFullYear())</script>
-            </p>
-            <!-- TODO: Add footer logo image -->
-            <img src="./images/logo.webp" alt=""/>
-        </div>
-        <div class="footer-right">
-            <!-- TODO: Add footer contact heading -->
-            <p>Contact Info</p>
-            <address>
-                <ul>
-                    <!-- TODO: Add footer phone -->
-                    <li>
-                        phone: <a href="">1234567890</a>
-                    </li>
-                    <!-- TODO: Add footer email -->
-                    <li>
-                        email: <a href="">your-email@email.com</a>
-                    </li>
-                </ul>
-            </address>
-        </div>
-    </div>
-</footer>
-<!-- TODO: Remove this if not using the feather icons library -->
-<script src="https://unpkg.com/feather-icons"></script>
-<script type="text/javascript" src="./main.js"></script>
-<!-- TODO: Remove this if not using the feather icons library -->
-<script>feather.replace();</script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <!--TODO: Add description-->
+        <meta name="description" content=""/>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <!--TODO: Add primary font from Google Fonts, etc-->
+        <link href='https://fonts.googleapis.com/css?family=Inter:300,500,700' rel='stylesheet' type='text/css'>
+        <!--TODO: Add secondary font from Google Fonts, etc-->
+        <link href='https://fonts.googleapis.com/css?family=Raleway:300,500,700' rel='stylesheet' type='text/css'>
+        <!--TODO: Add secondary font if needed-->
+        <link rel="stylesheet" href="styles/main.css"/>
+        <!--TODO: Add meta title-->
+        <title></title>
+    </head>
+    <body>
+        <header role="banner" id="header"></header>
+        <main>
+            <section class="hero center-clean" id="hero"></section>
+            <section class="about box-shadow" id="about"></section>
+            <section class="services" id="services"></section>
+            <section class="projects box-shadow" id="projects"></section>
+            <section class="contact box-shadow" id="contact"></section>
+        </main>
+        <footer role="contentinfo" id="footer"></footer>
+        <script type="text/javascript" src="scripts/main.js"></script>
+    </body>
 </html>
