update scripts and header links

--- a/sections/header.html
+++ b/sections/header.html
@@ -26,6 +26,11 @@
                     <div class="mobile-row">OUR PROJECTS</div>
                 </a>
             </li>
+            <li>
+                <a href="#contact">
+                    <div class="mobile-row">CONTACT US</div>
+                </a>
+            </li>
         </ul>
         <!--TODO: customize mobile nav logo image-->
         <img src="./images/logo.webp" alt="Company Logo"/>
@@ -46,7 +51,7 @@
             </li>
             <li>
                 <!--TODO: customize main navbar link-->
-                <a class="button box-shadow center-clean" href="contact.html">CONTACT US</a>
+                <a class="button box-shadow center-clean" href="#contact">CONTACT US</a>
             </li>
         </ul>
     </nav>
