--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport"
-              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--TODO: Add description-->
         <meta name="description" content=""/>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <!--TODO: Add primary font from Google Fonts, etc-->
-        <link href='https://fonts.googleapis.com/css?family=Inter:300,500,700' rel='stylesheet' type='text/css'>
-        <!--TODO: Add secondary font from Google Fonts, etc-->
-        <link href='https://fonts.googleapis.com/css?family=Raleway:300,500,700' rel='stylesheet' type='text/css'>
         <!--TODO: Add secondary font if needed-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
+        <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter:300,500,700" as="style" onload="this.onload=null;this.rel='stylesheet'">
+        <link rel="preload" href="https://fonts.googleapis.com/css?family=Raleway:300,500,700" as="style" onload="this.onload=null;this.rel='stylesheet'">
+        <noscript>
+            <link href="https://fonts.googleapis.com/css?family=Inter:300,500,700" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css?family=Raleway:300,500,700" rel="stylesheet">
+        </noscript>
+        <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+        <noscript>
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        </noscript>
         <link rel="stylesheet" href="styles/main.css"/>
         <!--TODO: Add meta title-->
         <title></title>
