fix demo form submission

--- a/sections/contact.html
+++ b/sections/contact.html
@@ -16,8 +16,8 @@
                 </div>
                 <div>
                     <!-- TODO: Add contact form number label -->
-                    <label class="required" for="number">Phone Number</label><br/>
-                    <input required type="tel" id="number" name="number"/><br/>
+                    <label class="required" for="phone">Phone Number</label><br/>
+                    <input required type="tel" id="phone" name="number"/><br/>
                 </div>
                 <div>
                     <!-- TODO: Add contact form email label -->
